<resources>
    <string name="app_name">Examscorer</string>
    <string name="ptu_main_campus_question_papers">PTU Main Campus Question Papers</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="app_id">ca-app-pub-9104180069881340~6525361897</string>
    <string name="banner_id">ca-app-pub-9104180069881340/5020708530</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello H fragment</string>
    <string name="heading">Examscorer is an android app, from where you can download PTU(B-Tech) latest question papers. You can also visit website examscorer.co.in. Here you have same material but from app you can also download important pdf\'s ,notes and ppt\'s . Support me by sharing this app to your friends. \n Thank You!</string>
    <string name="title_activity_fullwidthimage">FullwidthimageActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="note">If you have any study material or any question papers please contact me</string>
    <string name="notice">Note : If you or your friends have question papers of this particular subject you can contact me.I\'ll will upload it.It will help many students</string>
    <string name="notice1">Note : If you or your friends have any type of study material , Please contact me.I\'ll upload it.It will help many students</string>
</resources>
