<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f1f1"
    android:orientation="vertical"
    tools:context="sonu.kumar.examscorer.Activity.LoginActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/card_design"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginTop="80dp"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_to_your_account"
        android:textColor="#000"
        android:layout_gravity="center_horizontal"
        android:textSize="20dp"
        android:padding="5dp"
        android:fontFamily="@font/custom_font_dark"/>
    <android.support.design.widget.TextInputLayout
    android:layout_margin="15dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.design.widget.TextInputEditText
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_email"
        android:hint="@string/email_address"/>

</android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_margin="15dp"
        android:layout_width="match_parent"
        app:passwordToggleEnabled="true"
        android:layout_height="wrap_content">
        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_pwd"
            android:inputType="textPassword"
            android:hint="@string/password"/>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <CheckBox
            android:id="@+id/login_remember_me_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:padding="1dp"
            android:textSize="16sp"
            android:textColor="#000"
            android:fontFamily="@font/custom_font_dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_me"/>
    </LinearLayout>
    <Button
        android:id="@+id/signin_button"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:fontFamily="@font/custom_font"
        android:textColor="#000"
        android:background="@drawable/signin_btn_bg"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:text="@string/sign_in"/>
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/login_signup"
            android:layout_marginLeft="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/custom_font"
            android:textColor="#000"
            android:text="@string/sign_up"/>

        <View
            android:layout_width="1dp"
            android:layout_marginLeft="15dp"
            android:layout_height="20dp"
            android:background="@drawable/line" />
        <TextView
            android:id="@+id/login_forgot_pwd"
            android:fontFamily="@font/custom_font"
            android:layout_marginLeft="15dp"

             android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_your_password"/>

    </LinearLayout>

</LinearLayout>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:id="@+id/login_coord"
        android:layout_height="wrap_content"
       android:layout_alignParentBottom="true"/>
</RelativeLayout>
